--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,4 +8,6 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
-Suggests: tinytest
+Suggests: 
+    rmarkdown,
+    tinytest
