--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,6 +8,11 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
+Imports:
+    data.table,
+    sf,
+    stars,
+    supercells
 Suggests: 
     rmarkdown,
     tinytest
