--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,12 +2,21 @@ Package: aRts
 Title: Functions and Workflows for Making Art with R
 Version: 0.0.0.9000
 Authors@R: 
-    person("Hendrik", "Wagenseil", "hendrik.wagenseil@gmail.com", role = c("aut", "cre"))
+    person(
+      given = "Hendrik"
+      , family = "Wagenseil"
+      , email = "hendrik.wagenseil@gmail.com"
+      , role = c("aut", "cre")
+    )
 Description: Contains a collection of functions to make pretty maps and images.
 License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
+Imports:
+    sf,
+    stars,
+    supercells
 Suggests: 
     rmarkdown,
     tinytest
