update NAMESPACE, DESCRIPTION, man

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,7 +15,7 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
 Imports:
     data.table,
-    osmmaps,
+    osmdata,
     sf,
     stars,
     supercells
